<resources>
    <string name="app_name">PlayingSong</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_new_song_notification">Enable Notification</string>

    <string name="pref_title_notifications">Enable notifications</string>
    <string name="pref_description_notification">Display the current song in the notification bar</string>
    <string name="pref_title_popup">Enable popups</string>
    <string name="pref_description_popup">Display the current song on a popup</string>
    <!-- notifications -->
    <string name="notification_channel">Current Playing Song</string>
    <string name="notification_channel_description">Notification showing the current song playing</string>

    <!-- popup -->
    <string name="pref_title_popup_time">Popup duration</string>
    <string name="pref_description_popup_time_summary">The time during which the popup will be displayed</string>
    <string name="pref_title_popup_height">Popup position</string>
    <string name="pref_description_popup_height_summary">The vertical position of the popup</string>
    <string name="pref_title_popup_transparency">Popup transparency</string>
    <string name="pref_description_popup_transparency_summary">The popup transparency</string>
    <string name="pref_title_popup_title_size">Song title text size</string>
    <string name="pref_description_popup_title_size_summary">The size of the song title on the popup</string>
    <string name="pref_title_popup_text_size">Other texts size</string>
    <string name="pref_description_popup_text_size_summary">The size of the other texts on the popup</string>
    <string name="pref_test_popup_button">Test popup</string>


</resources>
